SFDEV-6: set IPFS Docker container name to `ipfs-node`

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,6 +1,7 @@
 version: "3.9"
 services:
-  ipfs-host:
+  ipfs-node:
+    container_name: ipfs-node
     image: "ipfs/go-ipfs:latest"
     environment:
       IPFS_PROFILE: server
