SFDEV-7: fetch IPFS file hash from blockchain

--- a/.gitignore
+++ b/.gitignore
@@ -169,6 +169,7 @@ gradle-app.setting
 # Ignore generated docs
 src/main/resources/static/docs
 
-### IPFS Docker volumes
-**/ipfs-data/**
-**/ipfs-staging/**
+### Docker volumes
+docker/ipfs-data/**
+docker/ipfs-staging/**
+docker/geth/**
