--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,4 +4,4 @@ micronaut:
 
 auditor:
   rpc-url: https://ropsten.infura.io/v3/08664baf7af14eda956db2b71a79f12f
-  contract-address: 0x992E8FeA2D91807797717178Aa6abEc7F20c31a8
+  contract-address: "0x992E8FeA2D91807797717178Aa6abEc7F20c31a8"
