--- a/.github/workflows/check-pr.yml
+++ b/.github/workflows/check-pr.yml
@@ -9,12 +9,15 @@ jobs:
   code-control:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
       - name: Set up GraalVM
         uses: DeLaGuardo/setup-graalvm@4.0
         with:
           graalvm: '21.0.0.2'
-          java-version: 'java8'
+          java: 'java8'
+      - name: Check java binary
+        run: java -version
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
       - uses: actions/cache@v1
