--- a/.github/workflows/check-pr.yml
+++ b/.github/workflows/check-pr.yml
@@ -16,11 +16,12 @@ jobs:
         with:
           graalvm: '21.0.0.2'
           java: 'java8'
-      - name: Check java binary
+      - name: Check Java version
         run: java -version
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
-      - uses: actions/cache@v1
+      - name: Set up Gradle cache
+        uses: actions/cache@v1
         with:
           path: ~/.gradle/caches
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle.kts') }}
@@ -30,3 +31,41 @@ jobs:
         run: ./gradlew ktlinCheck
       - name: Code analysis
         run: ./gradlew detekt
+  jvm-test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Set up GraalVM
+        uses: DeLaGuardo/setup-graalvm@4.0
+        with:
+          graalvm: '21.0.0.2'
+          java: 'java8'
+      - name: Check java version
+        run: java -version
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+      - name: Set up Gradle cache
+        uses: actions/cache@v1
+        with:
+          path: ~/.gradle/caches
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle.kts') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
+      - name: Build
+        run: ./gradlew clean build -x test -x integTest -x apiTest
+      - name: Unit tests
+        run: ./gradlew test
+      - name: Integration tests
+        run: ./gradlew integTest
+      - name: API tests
+        run: ./gradlew apiTest
+      - name: Generate test coverage report
+        run: ./gradlew jacocoTestReport
+      - name: Verify test coverage minimum limit
+        run: ./gradlew jacocoTestCoverageVerification
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v1
+        with:
+          file: build/reports/jacoco/report.xml
+          fail_ci_if_error: false
