--- a/.github/workflows/check-pr.yml
+++ b/.github/workflows/check-pr.yml
@@ -6,7 +6,7 @@ name: Check pull request
 on: [ pull_request ]
 
 env:
-  GRAAVM_VERSION: '21.0.0.2'
+  GRAALVM_VERSION: '21.0.0.2'
   JAVA_VERSION: 'java8'
 
 jobs:
