--- a/.github/workflows/check-pr.yml
+++ b/.github/workflows/check-pr.yml
@@ -74,3 +74,29 @@ jobs:
           token: ${{ secrets.CODECOV_TOKEN }}
           file: build/reports/jacoco/report.xml
           fail_ci_if_error: false
+  native-image-test:
+    runs-on: ubuntu-latest
+    needs: [ code-control, jvm-test ]
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Set up GraalVM
+        uses: DeLaGuardo/setup-graalvm@4.0
+        with:
+          graalvm: ${{ env.GRAALVM_VERSION }}
+          java: ${{ env.JAVA_VERSION }}
+      - name: Check Java version
+        run: java -version
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+      - name: Set up Gradle cache
+        uses: actions/cache@v1
+        with:
+          path: ~/.gradle/caches
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle.kts') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
+      - name: Build native image
+        run: ./gradlew clean build -x test -x integTest -x apiTest nativeImage
+      - name: Native image API tests
+        run: ./gradlew apiTestNativeImage
