--- a/.github/workflows/check-pr.yml
+++ b/.github/workflows/check-pr.yml
@@ -34,7 +34,7 @@ jobs:
 #          restore-keys: |
 #            ${{ runner.os }}-gradle-
 #      - name: Linter
-#        run: ./gradlew ktlinCheck
+#        run: ./gradlew ktlintCheck
 #      - name: Code analysis
 #        run: ./gradlew detekt
 #  jvm-test:
@@ -79,7 +79,7 @@ jobs:
 #          file: build/reports/jacoco/report.xml
 #          fail_ci_if_error: false
   native-image-test:
-    runs-on: ubuntu-latest
+    runs-on: macos-latest # MacOS machines have 14GB of RAM which we need to successfully build native image
 #    needs: [ code-control, jvm-test ]
     steps:
       - name: Checkout code
@@ -93,6 +93,8 @@ jobs:
         run: java -version
       - name: Install native-image component
         run: gu install native-image
+#      - name: Rebuild polyglot images
+#        run: gu rebuild-images polyglot
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
       - name: Set up Gradle cache
