SD-124: implement auditing screen for webui

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,3 +4,8 @@ micronaut:
       enabled: true
   application:
     name: auditor-node
+  router:
+    static-resources:
+      webui:
+        paths: classpath:webui
+        mapping: /webui/**
