SD-164: document IPFS endpoints

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,3 +9,6 @@ micronaut:
       webui:
         paths: classpath:webui
         mapping: /webui/**
+      swagger:
+        paths: classpath:META-INF/swagger
+        mapping: /swagger/**
